--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p></p>
+            <p>This site was created by Mitty Forst. It uses data from mapbox.com and weatherstack.com</p>
             <img class="portrait" src="/img/irobort.jpg" />
         </div>
          {{>footer}}
